--- a/TeamProject-4/my-react-app/src/index.css
+++ b/TeamProject-4/my-react-app/src/index.css
@@ -2,17 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+/*:root {
+  background-image: url('./assets/backgroundImage_trasparente.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+}*/
+.helloworld-div {
+  position: absolute;
+  z-index: 1;
+  top: 15%;
+  right: 35%;
+  left: 20%;
+  font-size: 10rem;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  h1 {
+    color: rgb(255, 255, 255);
+    text-shadow: #474747 3px 5px 2px;
+  }
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.divHeroImage {
+  width: 100%;
+  height: 100%;
+  border-top: 5px solid rgb(0, 0, 0);
+  border-bottom: 5px solid black;
+}
+.heroImage {
+  width: 100%;
+  height: 100%;
 }
