Aggiustato testo home

--- a/TeamProject-4/my-react-app/src/index.css
+++ b/TeamProject-4/my-react-app/src/index.css
@@ -36,14 +36,8 @@
 }
 
 .helloworld-div {
-  position: absolute;
-  z-index: 1;
-  top: 23%;
-  right: 34%;
-  left: 22%;
-  font-size: 6rem;
 
-  h1, h2, h3{
+  h1{
     color: rgb(255, 255, 255);
     text-shadow: #474747 3px 5px 2px;
   }
