added font poppins and modified HomeText component.

--- a/TeamProject-4/my-react-app/src/index.css
+++ b/TeamProject-4/my-react-app/src/index.css
@@ -8,6 +8,10 @@
   background-repeat: no-repeat;
 }*/
 
+* {
+  font-family: 'Poppins', sans-serif;
+}
+
 .logo-page {
   display: flex;
   flex-direction: column;
