--- a/TeamProject-4/my-react-app/src/index.css
+++ b/TeamProject-4/my-react-app/src/index.css
@@ -28,9 +28,7 @@
     align-items: center;
   }
 
-  img {
-    height: 70px;
-  }
+  
 
   p {
     font-size: 0.5rem;
@@ -57,11 +55,30 @@
   ul {
     display: flex;
     justify-content: center;
-    gap: 100px;
+    gap:100px;
   }
+  
+
 }
-
-
+@media (max-width: 640px) {
+  .navbar ul {
+    gap: 0;
+  }
+.logo-page{
+ margin-top: 20px;
+}
+ .content-card-container{
+  display: flex;
+  flex-direction: column;
+ }
+ 
+}
+.content-card-container{
+  display: flex;
+  justify-content: center;
+  margin-top: 20vh;
+  gap:50vh;
+}
 .divHeroImage {
   width: 100%;
   height: 100%;
@@ -76,3 +93,4 @@
 .div-accordion-nested{
   background-color: transparent;
 }
+
